--- a/src/main/site/index.html
+++ b/src/main/site/index.html
@@ -74,7 +74,7 @@
     </div>
 </div>
 <!-- Again, we're serving up the unminified source for clarity. -->
-<script type="text/javascript" src="./ts/main.js"></script>
+<script type="text/javascript" src="ts/main.js"></script>
 <div class="message"></div>
 </body>
 <!-- See http://html5boilerplate.com/ for a good place to start
